[package]
name = "gdbm"
version = "0.1.2"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
homepage = "https://github.com/cholcombe973/gdbm"
description = "Safe wrapper for gdbm-sys bindings"
license = "MIT"

[dependencies]
bitflags = "~1.2"
gdbm-sys = { version = "~0.3", path = "../gdbm-sys" }
libc = "~0.2"
