[package]
name = "gdbm"
version = "0.2.0"
edition = "2018"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
homepage = "https://github.com/cholcombe973/gdbm"
description = "Safe wrapper for gdbm-sys bindings"
license = "MIT"

[dependencies]
anyhow = "1.0"
bitflags = "~1.3"
gdbm-sys = "~0.3"
libc = "~0.2"
thiserror = "1.0"
